force-app/main/default/objects/Opportunity/fields/FS_AcceptedAt__c.field-meta.xml
<CustomField>
    <fullName>FS_AcceptedAt__c</fullName>
    <label>Oferta aceita em</label>
    <type>DateTime</type>
</CustomField>