force-app/main/default/objects/Opportunity/fields/FS_AccountName__c.field-meta.xml
<CustomField>
    <fullName>FS_AccountName__c</fullName>
    <formula>Account.PersonContact.FirstName &amp; &quot; &quot; &amp; Account.PersonContact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome da Conta</label>
    <type>Text</type>
</CustomField>