force-app/main/default/objects/Opportunity/fields/FS_AccountPersonEmail__c.field-meta.xml
<CustomField>
    <fullName>FS_AccountPersonEmail__c</fullName>
    <formula>Account.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Pessoal da Conta</label>
    <type>Text</type>
</CustomField>