force-app/main/default/objects/Opportunity/fields/FS_AccountPhone__c.field-meta.xml
<CustomField>
    <fullName>FS_AccountPhone__c</fullName>
    <formula>Account.PersonContact.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telefone da Conta</label>
    <type>Text</type>
</CustomField>