force-app/main/default/objects/Opportunity/fields/FS_AgentEmail__c.field-meta.xml
<CustomField>
    <fullName>FS_AgentEmail__c</fullName>
    <description>E-mail of the front task agent that is filled throught integration</description>
    <label>Email do Analista do Front</label>
    <length>100</length>
    <type>Text</type>
</CustomField>