force-app/main/default/objects/Opportunity/fields/FS_BankChosen__c.field-meta.xml
<CustomField>
    <fullName>FS_BankChosen__c</fullName>
    <label>Banco escolhido</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bancos</valueSetName>
    </valueSet>
</CustomField>