force-app/main/default/objects/Opportunity/fields/FS_CanUseFGTS__c.field-meta.xml
<CustomField>
    <fullName>FS_CanUseFGTS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pode usar FGTS?</label>
    <type>Checkbox</type>
</CustomField>