force-app/main/default/objects/Opportunity/fields/FS_CCVSigned__c.field-meta.xml
<CustomField>
    <fullName>FS_CCVSigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CCV Assinado</label>
    <type>Checkbox</type>
</CustomField>