force-app/main/default/objects/Opportunity/fields/FS_CCVTerminationCreatedAt__c.field-meta.xml
<CustomField>
    <fullName>FS_CCVTerminationCreatedAt__c</fullName>
    <label>Distrato criado em</label>
    <type>DateTime</type>
</CustomField>