force-app/main/default/objects/Opportunity/fields/FS_ChosenMortgageApplication__c.field-meta.xml
<CustomField>
    <fullName>FS_ChosenMortgageApplication__c</fullName>
    <label>Aplicação do financiamento escolhido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>