force-app/main/default/objects/Opportunity/fields/FS_ClientResponse__c.field-meta.xml
<CustomField>
    <fullName>FS_ClientResponse__c</fullName>
    <label>Resposta do cliente?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banco escolhido</fullName>
            </value>
            <value>
                <fullName>Aguardar outro banco</fullName>
            </value>
            <value>
                <fullName>Financiamento externo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>