force-app/main/default/objects/Opportunity/fields/FS_CreditFormLink__c.field-meta.xml
<CustomField>
    <fullName>FS_CreditFormLink__c</fullName>
    <label>Link do formulário de crédito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>