force-app/main/default/objects/Opportunity/fields/FS_CreditProposal__c.field-meta.xml
<CustomField>
    <fullName>FS_CreditProposal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox that show if the proposal was generated, is filled throught integration with Hightouch</description>
    <label>Proposta crédito gerada?</label>
    <type>Checkbox</type>
</CustomField>