force-app/main/default/objects/Opportunity/fields/FS_downPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>FS_downPaymentAmount__c</fullName>
    <label>Valor de entrada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>