force-app/main/default/objects/Opportunity/fields/FS_HasUpdatedAmounts__c.field-meta.xml
<CustomField>
    <fullName>FS_HasUpdatedAmounts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that shows if there is update in amounts, is filled thorugh integration</description>
    <label>Valores atualizados?</label>
    <type>Checkbox</type>
</CustomField>