force-app/main/default/objects/Opportunity/fields/FS_isCreditFormFilled__c.field-meta.xml
<CustomField>
    <fullName>FS_isCreditFormFilled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Formulário de crédito preenchido?</label>
    <type>Checkbox</type>
</CustomField>