force-app/main/default/objects/Opportunity/fields/FS_mortgageIntentionUuid__c.field-meta.xml
<CustomField>
    <fullName>FS_mortgageIntentionUuid__c</fullName>
    <externalId>true</externalId>
    <label>UUID da intenção de financiamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>