force-app/main/default/objects/Opportunity/fields/FS_paymentMethod__c.field-meta.xml
<CustomField>
    <fullName>FS_paymentMethod__c</fullName>
    <label>Método de pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MetodosdePagamento</valueSetName>
    </valueSet>
</CustomField>