force-app/main/default/objects/Opportunity/fields/FS_ProceedWithQuintoAndar__c.field-meta.xml
<CustomField>
    <fullName>FS_ProceedWithQuintoAndar__c</fullName>
    <label>Cliente quer seguir com QuintoAndar?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Não decidiu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>