force-app/main/default/objects/Opportunity/fields/FS_SellerEmail__c.field-meta.xml
<CustomField>
    <fullName>FS_SellerEmail__c</fullName>
    <formula>Seller__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email do Seller</label>
    <type>Text</type>
</CustomField>