force-app/main/default/objects/Opportunity/fields/FS_SellerName__c.field-meta.xml
<CustomField>
    <fullName>FS_SellerName__c</fullName>
    <formula>Seller__r.PersonContact.FirstName &amp; &quot; &quot; &amp; Seller__r.PersonContact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do Seller</label>
    <type>Text</type>
</CustomField>