force-app/main/default/objects/Opportunity/fields/FS_SellerPhone__c.field-meta.xml
<CustomField>
    <fullName>FS_SellerPhone__c</fullName>
    <formula>Seller__r.PersonContact.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telefone do Seller</label>
    <type>Text</type>
</CustomField>