force-app/main/default/objects/Opportunity/fields/FS_SourceEvent__c.field-meta.xml
<CustomField>
    <fullName>FS_SourceEvent__c</fullName>
    <description>Field is filled when Salesforce receive a event from Hightouch, responsible to identify which event is.</description>
    <label>Source Event</label>
    <length>30</length>
    <type>Text</type>
</CustomField>