force-app/main/default/objects/Opportunity/fields/FS_WillUseSavings__c.field-meta.xml
<CustomField>
    <fullName>FS_WillUseSavings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vai usar FGTS?</label>
    <type>Checkbox</type>
</CustomField>