force-app/main/default/objects/Opportunity/fields/OfferId__c.field-meta.xml
<CustomField>
    <fullName>OfferId__c</fullName>
    <externalId>true</externalId>
    <label>Id da Oferta</label>
    <length>100</length>
    <type>Text</type>
</CustomField>