force-app/main/default/objects/Opportunity/fields/Processo_Ativo__c.field-meta.xml
<CustomField>
    <fullName>Processo_Ativo__c</fullName>
    <label>Processo_Ativo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>