force-app/main/default/objects/Opportunity/recordTypes/Mortgage.recordType-meta.xml
<RecordType>
    <fullName>Mortgage</fullName>
    <active>true</active>
    <businessProcess>Mortgage</businessProcess>
    <label>Mortgage</label>
</RecordType>